--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "nodemon src/server.js --open",
     "test": "jasmine",
     "karma": "karma start"
   }
